﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
+ v2.3.0:
~~~~~~~~~

+ KGySoft.Drawing.ImagingTools.exe
==================================
+ Save/Load: Supporting saving load raw bitmap data, which preserves any pixel format
+ Color Settings:
  + Count Colors
+ New Edit Image drop down button
  + Rotate Left/Right
  + Resize Bitmap
  + Pixel Format/Quantizing/Dithering
  + Adjust Brightness/Contrast/Gamma
+ API changes:
  + ViewModelFactory class:
    + New CreateResizeBitmap method
    + New CreateAdjustColorSpace method
    + New CreateCountColors method
    + New CreateAdjustBrightness method
    + New CreateAdjustContrast method
    + New CreateAdjustGamma method


~~~~~~~~~
* v2.2.1:
~~~~~~~~~

* KGySoft.Drawing.ImagingTools.exe
==================================
- Tolerating if uncompressed icon stream does not have a transparency mask.
* InstallationManager class:
  * To avoid confusion the Install method installs the .NET Core support only for the .NET 4.5 build. This is
    considered as a compatible change as .NET Core support didn't work for other builds anyway so only the error
    message will be different (and more reasonable) if we try to debug a Core project with the wrong installation.


~~~~~~~~~
* v2.2.0:
~~~~~~~~~

+ KGySoft.Drawing.ImagingTools.exe
==================================
+ Targeting also .NET Core 3.0
- The Framework builds now support Mono (tested on Ubuntu Linux)
+ The image preview now can be zoomed and scrolled freely when Auto Zoom is turned off.
  To zoom use the Ctrl + Mouse Wheel or the pinch zooming gesture on the touchpad.
  For scrolling vertical and horizontal mouse wheels and the touchpad scrolling gestures are completely supported.
+ New Smooth Zooming toggle button:
  For bitmaps and icons toggles pixelated/smoothed appearance when the image is enlarged.