@@ -11,6 +11,7 @@
 
 + KGySoft.Drawing.ImagingTools.exe
 ==================================
++ Key shortcuts for several commands
 + Save/Load: Supporting saving load raw bitmap data, which preserves any pixel format
 + Color Settings:
   + Count Colors
@@ -19,6 +20,7 @@
   + Resize Bitmap
   + Pixel Format/Quantizing/Dithering
   + Adjust Brightness/Contrast/Gamma
++ Tool strip items can be clicked even if the container form is not activated
 + API changes:
   + ViewModelFactory class:
     + New CreateResizeBitmap method
